small fix with spacing on the category page

--- a/styles/category-style.css
+++ b/styles/category-style.css
@@ -25,6 +25,7 @@
   padding: 1%;
   /* max-width: 300px; */
   margin: 30px auto;
+  padding-top: 35px;
   text-align: center;
   font-family: arial;
   position: relative;
@@ -47,6 +48,7 @@
   display: flex;
   width: 80%;
   margin: 150px auto;
+  margin-top: 75px;
   flex-wrap: wrap;
   justify-content: center;
 }
